test_data/typeerror/core-32318.py
try:
    current = math.floor(int(current_level * 100))
except ZeroDivisionError:
    current = 0